# MontyCarlo

./: .gitignore  LICENSE  README.md  pyproject.toml
montycarlo/: __main__.py  monty.py
two_goats_one_car/: __main__.py  monty.py  results.py
